@@ -9,11 +9,15 @@ public class FSDocumentInfo {
     private final boolean sentToOFD;
     private final byte[] data;
     private final FSDateTime dateTime;
+    private final int documentNumber;
+    private final long fp;
 
-    public FSDocumentInfo(CommandInputStream in) {
+    public FSDocumentInfo(CommandInputStream in) throws Exception {
         fsDocType = new FSDocType(in.readByte());
         sentToOFD = in.readByte() != 0;
         dateTime = in.readFSDate();
+        documentNumber = in.readInt();
+        fp = in.readLong(4);
         data = in.readBytesToEnd();
     }
 
@@ -27,6 +31,14 @@ public class FSDocumentInfo {
 
     public FSDateTime getDateTime() {
         return dateTime;
+    }
+
+    public long getFP() {
+        return fp;
+    }
+
+    public int getDocumentNumber() {
+        return documentNumber;
     }
 
     public byte[] getData() {
