@@ -2,9 +2,13 @@
 ********************************************************************************
 
   Project : SHTRIH-M JavaPOS fiscal printer driver
-  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090
+  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
 
 ********************************************************************************
+  July 6 2017, 3:08
+  deviceServiceVersion = 1013444
+	
+  [+] Added FP to FSFindDocument
 
   July 5 2017, 22:00
   deviceServiceVersion = 1013443
